@@ -1,3 +1,10 @@
+2006-09-02  Richard A. Stellingwerff  <remenic@gmail.com>
+
+	* engines/clearlooks/src/clearlooks_style.c:
+	(clearlooks_style_draw_option), (clearlooks_style_draw_check):
+
+	Increased contrast of disabled radio/checkboxes. Fixes #326309.
+
 2006-08-31  Thomas Wood  <thos@gnome.org>
 
 	* themes/Clearlooks/gtk-2.0/gtkrc: Remove glossy scrollbars (with
